fix: Breaks in corners on the dropdown menu

--- a/frontend/express/public/stylesheets/styles/blocks/_select.scss
+++ b/frontend/express/public/stylesheets/styles/blocks/_select.scss
@@ -79,7 +79,6 @@
 }
 
 .cly-vue-listbox {
-    background-color: map.get(c.$colors, "white");
 
     label.el-checkbox {
         width: 100%;
